--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">AndroidAppInicial</string>
+    <string name="text_Bienvenida">Bienvenido</string>
+    <string name="text_bt_Entrar">Entrar</string>
 </resources>
